# patho_grading_10.1016_j.asoc.2020.106808_reproduce

./: .gitignore  README.md  main.py  pyproject.toml  roi_selector.py  visualization.ipynb
.github/instructions/: ai-code-of-conduct.instructions.md
cabcds/: __init__.py  config.py  logging.py
cabcds/data_preparation/: __init__.py  __main__.py  config.py  io.py  macenko.py  pipeline.py
cabcds/hybrid_descriptor/: __init__.py  __main__.py  config.py  descriptor.py  pipeline.py
cabcds/mf_cnn/: __init__.py  __main__.py  checkpoints.py  cnn.py  config.py  det_data.py  mitosis_detection_net.py  mitosis_segmentation_net.py  models.py  preprocess.py  roi_scoring_net.py  training.py  wsi_inference.py
cabcds/mf_cnn/utils/: loader.py  seg_patches.py
cabcds/roi_selector/: README.md  __init__.py  __main__.py  benchmark.py  cli.py  config.py  features.py  inference.py  negative_filter_dl.py  report_export.py  sampling.py  training.py
cabcds/roi_selector/utils/: __init__.py  blue_ratio.py  create_roi_patches.py  features.py  io.py  loader.py  macenko.py
cabcds/wsi_scorer/: __init__.py  __main__.py  config.py  feature_transform.py  pipeline.py
scripts/: extract_tupac_features.py  make_ground_truth_with_groups.py  merge_stage_four_csvs.sh  monitor_cnn_det.sh  monitor_cnn_global.sh  predict_wsi_scorer.py  run_cnn_global_paper_cv3.sh  run_det_paper_to_output.sh  run_extract_features_npu.sh  run_stage_three_infer_eval.py  train_seg_npu.sh  train_wsi_scorer.py
tools/: build_wsi_scorer_holdout_dataset.py  compare_det_runs.py
